--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,57 @@
                 <div class="steps-items-wrapper row">
                     <div class="col-lg-3">
                         <div class="steps-num">
-                           
+                            <img src="assets/img/steps-triangle.webp" alt="triangle">
+                            <p>01<span>шаг</span></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-num">
+                            <img src="assets/img/steps-triangle.webp" alt="triangle">
+                            <p>02<span>шаг</span></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-num">
+                            <img src="assets/img/steps-triangle.webp" alt="triangle">
+                            <p>03<span>шаг</span></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-num">
+                            <img src="assets/img/steps-triangle.webp" alt="triangle">
+                            <p>04<span>шаг</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="steps-texts-wrapper row">
+                    <div class="col-lg-3">
+                        <div class="steps-text-item">
+                            <div class="steps-text-item-circle"></div>
+                            <h6>Заявка и консультация</h6>
+                            <p>Для заказа уборки, оставьте заявку на сайте или перезвоните нам по телефону:</p>
+                            <a href="#">+7 (495) 755-49-22</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-text-item">
+                            <div class="steps-text-item-circle"></div>
+                            <h6>Согласование работ</h6>
+                            <p>Согласуем стоимость уборки, удобную дату, время и оформим заказ</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-text-item">
+                            <div class="steps-text-item-circle"></div>
+                            <h6>Уборка</h6>
+                            <p>Наши клинеры приедут на объект и проведут профессиональный клининг</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="steps-text-item">
+                            <div class="steps-text-item-circle"></div>
+                            <h6>Оплата</h6>
+                            <p>Вы проверяете качество уборки, принимаете ее и оплачиваете стоимость нашей услуги</p>
                         </div>
                     </div>
                 </div>
