--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,95 @@
                     <h2>Все процессы уборки отцифрованы</h2>
                     <p>В работе мы используем собственную систему по управлению задачами. Всю свою работу клинеры ведут в ней. Именно эта программа помогает нам приезжать точно в указанный срок, ни забывать о поставленных задачах во время уборки и сдавать идеально чистые помещения после профессионального клининга.</p>
                 </div>
+                <div class="system-items-wrapper">            
+                    <div class="system-item">
+                        <p>12</p>
+                    </div>
+                    <div class="system-item">
+                        <p>13</p>
+                    </div>
+                    <div class="system-item">
+                        <p>14</p>
+                    </div>
+                    <div class="system-item">
+                        <p>15</p>
+                    </div>
+                    <div class="system-item">
+                        <p>16</p>
+                    </div>
+                    <div class="system-item">
+                        <p>17</p>
+                    </div>
+                    <div class="system-item">
+                        <p>18</p>
+                    </div>
+                    <div class="system-item">
+                        <p>19</p>
+                    </div>
+                    <div class="system-item">
+                        <p>20</p>
+                    </div>
+                    <div class="system-item">
+                        <p>21</p>
+                    </div>
+                    <div class="system-bar sys-bar1 sys-orange">
+                        <div class="system-bar-img">
+                            <img src="assets/img/system1.webp" alt="avatar">
+                        </div>
+                        <div class="system-bar-text">
+                            <p>Генеральная 75 м2</p>
+                            <span>ул. Академическая 41</span>
+                        </div>
+                    </div>
+                    <div class="system-bar sys-bar2 sys-orange">
+                        <div class="system-bar-img">
+                            <img src="assets/img/system2.webp" alt="avatar">
+                        </div>
+                        <div class="system-bar-text">
+                            <p>Поддерживающая 45 м2</p>
+                            <span>ул. Пушкина 11</span>
+                        </div>
+                    </div>
+                    <div class="system-bar sys-bar3">
+                        <div class="mid-nav__call-img">
+                            <img src="assets/img/system3.webp" alt="operator">
+                            <div class="mid-nav__call-active" style="right: 0;"></div>
+                        </div>
+                        <div class="system-bar-text">
+                            <p>После ремонта 56 м22</p>
+                            <span>ул. Ушаковская 19а</span>
+                        </div>
+                    </div>
+                    <div class="system-bar sys-bar4">
+                        <div class="mid-nav__call-img">
+                            <img src="assets/img/system4.webp" alt="operator">
+                        </div>
+                        <div class="system-bar-text">
+                            <p>Химчистка мебели</p>
+                            <span>ул. Колхозная 17</span>
+                        </div>
+                    </div>
+                    <div class="system-bar sys-bar5">
+                        <div class="mid-nav__call-img">
+                            <img src="assets/img/system5.webp" alt="operator">
+                            <img src="assets/img/system6.webp" alt="operator">
+                        </div>
+                        <div class="system-bar-text">
+                            <p>Генеральная уборка офиса 175 м2</p>
+                            <span>ул. Профсоюзная 56</span>
+                        </div>
+                    </div>
+                    <div class="system-bar sys-bar6">
+                        <div class="mid-nav__call-img">
+                            <img src="assets/img/system7.webp" alt="operator">
+                            <div class="mid-nav__call-active" style="right: 0;"></div>
+                        </div>
+                        <div class="system-bar-text">
+                            <p>Мойка окон на вышке</p>
+                            <span>ул. 2-я Мякининская 24</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="steps-section">
