--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                             <div class="main-slider-marker">Вымоем пол и <br> пропылесосим ковры</div>
                             <div class="main-slider-marker">Обеспылим <br> осветительные приборы</div>
                         </div>
-                        <div class="mob-main-slider-slider-text"></div>
+                        <div class="mob-main-slider-slider-text">
                             <div class="mob-main-slider-slider-text-items-wrapper">
                                 <p>Обеспылим фасады мебели</p>
                                 <p>Вымоем бытовую технику</p>
