--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/slick.css">
@@ -68,7 +69,7 @@
             </div>
         </div>
         <div class="side-menu-content">           
-            <a href="#">Уборка квартир</a>
+            <a href="services.html">Уборка квартир</a>
             <a href="#">Уборка домов</a>
             <a href="#">Дополнительные услуги</a>
             <a href="#">Мойка окон</a>
@@ -144,7 +145,7 @@
         <div class="container">
             <div class="mid-nav-wrapper">
                 <div class="mid-nav__logo">
-                    <img src="assets/img/nav-logo.png" alt="logo">
+                    <a href="index.html"><img src="assets/img/nav-logo.png" alt="logo"></a>
                     <p>Клининг квартир, домов, <br> офисов в Москве и МО</p>
                 </div>
                 <div class="mid-nav__count-bar">
@@ -179,7 +180,7 @@
         <div class="container">
             <div class="bottom-nav-wrapper">             
                 <div class="bottom-nav-item bottom-nav-item1">
-                    <a href="#" class="bottom-nav-link1">
+                    <a href="services.html" class="bottom-nav-link1">
                         Уборка квартир
                         <img style="width: 12px;height: 12px;margin-right: 0;margin-left: 4px;transform: translateY(-1.5px);"
                         src="assets/img/nav-dropdown-arrow.svg" 
@@ -2414,14 +2415,5 @@
     <script src="assets/js/examples.js"></script>
     <script src="assets/js/side-menu.js"></script>
     <script src="assets/js/counter.js"></script>
-    <script>
-        const slider = document.querySelector('.example-item-image-slider');
-        const afterImage = document.querySelector('.example-item-after-image');
-
-        slider.addEventListener('input', (event) => {
-            const value = event.target.value;
-            afterImage.style.clipPath = `inset(0 0 0 ${value}%)`; // Управляем видимой частью изображения "После"
-        });
-    </script>
 </body>
 </html>
