--- a/services.html
+++ b/services.html
@@ -370,6 +370,11 @@
     </header>
 
     <main>
+        <div class="container">
+            <div class="banner-breadcrumb">
+                <p><span>Главная</span> / Уборка квартир</p>
+            </div>
+        </div>
         <section class="banner">
             <div class="mobile-nav">
                 <div class="container">
@@ -384,9 +389,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="banner-breadcrumb">
-                    <p><span>Главная</span> / Уборка квартир</p>
-                </div>
+           
                 <div class="banner-wrapper">
                     <div class="banner-content">
                         <h1>Уборка квартир в <span class="mobile-br"></span> Москве <span class="mobile-br"></span> <span>от 60 руб./м2</span></h1>
@@ -856,7 +859,7 @@
             <div class="container">
                 <div class="calc-title">Онлайн калькулятор уборки</div>
                 <div class="calc-section-wrapper row">
-                    <div class="calc-params col-8">
+                    <div class="calc-params col-xl-8 col-12">
                         <div class="calc-param-item">
                             <div class="calc-param-title">Тип помещения:</div>
                             <div class="custom-select-wrapper">
@@ -927,73 +930,73 @@
                             <div class="calc-param-title">Дополнительные услуги:</div>
                             <div class="calc-adds-wrapper">
                                 <div class="calc-add-items row">
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox1">
                                             <label for="checkbox1"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox2">
                                             <label for="checkbox2"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox3">
                                             <label for="checkbox3"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox4">
                                             <label for="checkbox4"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox5">
                                             <label for="checkbox5"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox6">
                                             <label for="checkbox6"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox7">
                                             <label for="checkbox7"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox8">
                                             <label for="checkbox8"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox9">
                                             <label for="checkbox9"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox10">
                                             <label for="checkbox10"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox11">
                                             <label for="checkbox11"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-lg-4 col-6">
+                                    <div class="col-md-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox12">
                                             <label for="checkbox12"><p>Поменять постельное белье</p></label>
@@ -1003,7 +1006,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="calc-form-wrapper col-4">
+                    <div class="calc-form-wrapper col-xl-4 col-12">
                         <div class="calc-price-form">
                             <h5>Уборка квартиры <span>153 м²</span></h5>
                             <div class="calc-price-form-add">
@@ -2439,8 +2442,8 @@
         <section class="services-page__info-section">
             <div class="container">
                 <div class="services-page__info-wrapper row">
-                    <div class="services-page__info-img col-lg-5" style="background: url(assets/img/services/services-info.webp);"></div>
-                    <div class="services-page__info-text col-lg-7">
+                    <div class="services-page__info-img col-xl-5" style="background: url(assets/img/services/services-info.webp);"></div>
+                    <div class="services-page__info-text col-xl-7">
                         <strong>
                             Уборка квартир в Москве и области — это наш профиль! Более 8 лет компания оказывает услуги по уборке, и сервис всегда остается на высоте.
                         </strong>
