--- a/contact.html
+++ b/contact.html
@@ -113,10 +113,10 @@
                     <a class="nav-link" aria-current="page" href="#">Цены</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Наши работы</a>
+                    <a class="nav-link" href="examples.html">Наши работы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
+                    <a class="nav-link" href="sales.html"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
                 </li> 
                 <li class="nav-item">
                 <a class="nav-link" href="#">Вопросы</a>
@@ -146,7 +146,7 @@
                 </div>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link selected-nav-item" href="contact.html">Контакты</a>
                 </li>
                 </ul>
             </div>
@@ -191,7 +191,7 @@
         <div class="container">
             <div class="bottom-nav-wrapper">             
                 <div class="bottom-nav-item bottom-nav-item1">
-                    <a href="services.html" class="bottom-nav-link1 selected-nav-item">
+                    <a href="services.html" class="bottom-nav-link1">
                         Уборка квартир
                         <img style="width: 12px;height: 12px;margin-right: 0;margin-left: 4px;transform: translateY(-1.5px);"
                         src="assets/img/nav-dropdown-arrow.svg" 
@@ -417,7 +417,7 @@
                     </div>
                 </div>
                 <div class="contact__map-wrapper">
-
+                    <div style="position:relative;overflow:hidden;width: 100%;height: 100%;border-radius: 12px;"><a href="https://yandex.com.ge/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.com.ge/maps/213/moscow/?from=mapframe&indoorLevel=1&ll=37.593614%2C55.782628&mode=usermaps&source=mapframe&um=constructor%3A8a0a241b7d240075a1fecdc35b82ef79c893790ec098146b713337920a3e5df9&utm_medium=mapframe&utm_source=maps&z=16.6" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс Карты — транспорт, навигация, поиск мест</a><iframe src="https://yandex.com/map-widget/v1/?from=mapframe&indoorLevel=1&ll=37.593614%2C55.782628&mode=usermaps&source=mapframe&um=constructor%3A8a0a241b7d240075a1fecdc35b82ef79c893790ec098146b713337920a3e5df9&utm_source=mapframe&z=16.6" width="100%" height="100%" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
                 </div>
                 <div class="contact__info-wrapper row">
                     <div class="col-xl-8">
