--- a/examples.html
+++ b/examples.html
@@ -112,10 +112,10 @@
                     <a class="nav-link" aria-current="page" href="#">Цены</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Наши работы</a>
+                    <a class="nav-link selected-nav-item" href="#">Наши работы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
+                    <a class="nav-link" href="sales.html"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
                 </li> 
                 <li class="nav-item">
                 <a class="nav-link" href="#">Вопросы</a>
@@ -145,7 +145,7 @@
                 </div>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="contact.html">Контакты</a>
                 </li>
                 </ul>
             </div>
@@ -190,7 +190,7 @@
         <div class="container">
             <div class="bottom-nav-wrapper">             
                 <div class="bottom-nav-item bottom-nav-item1">
-                    <a href="services.html" class="bottom-nav-link1 selected-nav-item">
+                    <a href="services.html" class="bottom-nav-link1">
                         Уборка квартир
                         <img style="width: 12px;height: 12px;margin-right: 0;margin-left: 4px;transform: translateY(-1.5px);"
                         src="assets/img/nav-dropdown-arrow.svg" 
