--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                     <a class="nav-link" aria-current="page" href="#">Цены</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Наши работы</a>
+                    <a class="nav-link" href="examples.html">Наши работы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
+                    <a class="nav-link" href="sales.html"><img src="assets/img/nav-light.webp" alt="light">Акции</a>
                 </li> 
                 <li class="nav-item">
                 <a class="nav-link" href="#">Вопросы</a>
@@ -135,7 +135,7 @@
                 </div>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Контакты</a>
+                <a class="nav-link" href="contact.html">Контакты</a>
                 </li>
                 </ul>
             </div>
