--- a/sales.html
+++ b/sales.html
@@ -392,87 +392,234 @@
         <div class="sales__page-content">
             <div class="container">
                 <h1 class="standart-page-title">Акции</h1>
+
                 <div class="sales__page-items row">
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-12">
-                        <div class="sales__page-item">
-                            <div class="sales__page-item-img" style="background: url(assets/img/sales-page-item1.webp);">
-                                <div class="sales__page-item-img-bar">
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
                                     Скидка
                                 </div>
                             </div>
-                            <div class="sales__page-item-text">
-                                <h6>Скидка 10% на первый заказ</h6>
-                                <p>Получите скидочный купон и гарантированную скидку на наши услуги по уборке при первом заказе.</p>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
                             </div>
                         </div>
                     </div>
-                </div>
-                
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
+                                    Скидка
+                                </div>
+                            </div>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
+                                    Скидка
+                                </div>
+                            </div>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-sm-6 col-12">
+                        <div class="sales-slide">
+                            <div class="sales-slide-img" style="background: url(assets/img/sales-slide1.webp);">
+                                <div class="sales-slide-img-alert">
+                                    Скидка
+                                </div>
+                            </div>
+                            <div class="sales-slide-content">
+                                <h5>Скидка 10% на первый заказ</h5>
+                                <p>Получите купон и гарантированную скидку на любые наши услуги при первом заказе</p>
+                                <a href="#"><button class="btn sales-btn">
+                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                                        viewBox="0 0 27.793 27.793" xml:space="preserve">
+                                    <g>
+                                        <g id="c1_ray">
+                                            <polygon points="20.972,0 5.076,15.803 10.972,15.803 6.44,27.793 22.716,11.989 16.819,11.989 		"/>
+                                        </g>
+                                        <g id="Capa_1_29_">
+                                        </g>
+                                    </g>
+                                    </svg>
+                                    Заказать по акции</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
             </div>
         </div>
 
