--- a/reviews.html
+++ b/reviews.html
@@ -420,27 +420,150 @@
                         </div>
                     </div>
                     <div class="reviews__page-items row">
-                        <div class="col-6">
-
-                        </div>
-                        <div class="reviews-slide">
-                            <img style="width: 34px;"
-                            src="assets/img/yandex-slider.webp"
-                            alt="yandex"
-                            class="reviews-slide-logo">
-                            <div class="reviews-slide-rate">
-                                <img src="assets/img/reviews-slider-stars.webp" alt="stars">
-                                <p>5,0</p>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
                             </div>
-                            <h5>Петрова Анна</h5>
-                            <h6>Хочу выразить огромную благодарность клининговой компании</h6>
-                            <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
-                            <div class="reviews-slide-alert">
-                                <a href="#">Генеральная уборка квартиры</a>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
                             </div>
                         </div>
-                       
-                        
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12">
+                            <div class="reviews-slide">
+                                <img style="width: 34px;"
+                                src="assets/img/yandex-slider.webp"
+                                alt="yandex"
+                                class="reviews-slide-logo">
+                                <div class="reviews-slide-rate">
+                                    <img src="assets/img/reviews-slider-stars.webp" alt="stars">
+                                    <p>5,0</p>
+                                </div>
+                                <h5>Петрова Анна</h5>
+                                <h6>Хочу выразить огромную благодарность клининговой компании</h6>
+                                <p>Учитывая то, что у нас уже есть ребенок и времени на уборку практически не было, мы решили обратиться за помощью, и муж вызвал клинеров. Команда из двух специалистов прибыла вовремя, быстро приступила к работе и очень тщательно вымыла всю квартиру за несколько часов. Они проявили себя с лучшей стороны, учли мои пожелания по поводу эко-средств и особенности уборки, связанные с нашим положением. Мы были приятно удивлены результатом.</p>
+                                <div class="reviews-slide-alert">
+                                    <a href="#">Генеральная уборка квартиры</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>          
                 </section>
             </div>
