--- a/services.html
+++ b/services.html
@@ -374,7 +374,7 @@
     <main>
         <div class="container">
             <div class="banner-breadcrumb">
-                <p><span>Главная</span> / Уборка квартир</p>
+                <p><a href="index.html">Главная</a> / Уборка квартир</p>
             </div>
         </div>
         <section class="banner">
