--- a/examples.html
+++ b/examples.html
@@ -372,7 +372,7 @@
     <main>
         <div class="container">
             <div class="banner-breadcrumb">
-                <p><span>Главная</span> / Наши работы</p>
+                <p><a href="index.html">Главная</a> / Наши работы</p>
             </div>
         </div>
 
