--- a/garants.html
+++ b/garants.html
@@ -372,7 +372,7 @@
     <main>
         <div class="container">
             <div class="banner-breadcrumb">
-                <p><span>Главная</span> / Гарантии</p>
+                <p><a href="index.html">Главная</a> / Гарантии</p>
             </div>
         </div>
 
