--- a/prices.html
+++ b/prices.html
@@ -373,7 +373,7 @@
     <main>
         <div class="container">
             <div class="banner-breadcrumb">
-                <p><span>Главная</span> / Цены</p>
+                <p><a href="index.html">Главная</a> / Цены</p>
             </div>
         </div>
 
