--- a/sertificats.html
+++ b/sertificats.html
@@ -372,7 +372,7 @@
     <main>
         <div class="container">
             <div class="banner-breadcrumb">
-                <p><span>Главная</span> / Сертификаты</p>
+                <p><a href="index.html">Главная</a> / Сертификаты</p>
             </div>
         </div>
 
